<resources>
    <string name="app_name">Appetizer</string>

    <string name="title_activity_diary">Food Diary</string>
    <string name="title_activity_diary_entry">Diary Entry</string>
    <string name="title_activity_diary_entry_new">New Diary Entry</string>
    <string name="title_activity_diary_entry_edit">Edit Diary Entry</string>
    <string name="title_activity_daily_target">Daily Targets</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_dietary_restriction">Dietary restrictions</string>

    <string name="nav_search">Search</string>
    <string name="nav_diary">@string/title_activity_diary</string>
    <string name="nav_daily_target">@string/title_activity_daily_target</string>
    <string name="nav_dietary_restriction">@string/title_activity_dietary_restriction</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="diary_feed_empty">You currently have no entries in your Diary.</string>
    <string name="diary_feed_add">Add a new entry.</string>

    <!-- IDs for target nutrient values within SharedPreferences -->
    <string name="prefs_calorie_target">cs125.winter2017.uci.appetizer.CALORIE_TARGET</string>

    <!-- Literals -->
    <string name="zero">0</string>
    <string name="slash">/</string>

    <!-- Labels for nutrients -->
    <string name="date_label">Date</string>
    <string name="name_label">Name</string>
    <string name="calorie_label_short">cal</string>
    <string name="calories_label">Calories</string>
    <string name="fat_label">Fat</string>
    <string name="protein_label">Protein</string>
    <string name="cholesterol_label">Cholesterol</string>
    <string name="sugar_label">Sugar</string>
    <string name="carbohydrates_label">Carbohydrates</string>
    <string name="sodium_label">Sodium</string>
    <string name="fiber_label">Fiber</string>

    <!-- Units used for nutrients -->
    <string name="calorie_units">cals</string>
    <string name="fat_units">@string/gram_units</string>
    <string name="protein_units">@string/gram_units</string>
    <string name="cholesterol_units">@string/milligram_units</string>
    <string name="sugar_units">@string/gram_units</string>
    <string name="carbohydrates_units">@string/gram_units</string>
    <string name="fiber_units">@string/gram_units</string>
    <string name="sodium_units">@string/milligram_units</string>

    <!-- Display strings for units -->
    <string name="gram_units">g</string>
    <string name="milligram_units">mg</string>

    <string name="diary_entry_dish_name_label">Dish name</string>
    <string name="diary_entry_date_label">Date</string>
    <string name="diary_entry_unsaved">This entry has not been saved. Go back anyway?</string>
    <string name="diary_entry_name_hint">Enter dish name here...</string>
    <string name="diary_entry_delete_warning">This entry cannot be restored after deletion. Delete anyway?</string>

    <string name="daily_targets_saved">Nutritional targets saved!</string>
    <string name="diary_targets_label">Targets</string>

    <string name="ok">OK</string>
    <string name="alert_cancel">CANCEL</string>
    <string name="save">SAVE</string>

    <string name="get_location_service_failed">An error occurred accessing the location service.</string>
    <string name="get_location_invalid_location">The location provided was invalid.</string>
    <string name="get_location_no_addresses">No addresses were found using the given location.</string>
    <string name="get_location_found">Location found.</string>

    <string name="search_fetching_location">Fetching location...</string>
    <string name="search_location_not_found">Location could not be found.</string>
    <string name="search_address_not_found">No addresses matched your current location.</string>
    <string name="search_bar_hint">Enter search here...</string>
    <string name="search_location_label">Location</string>
    <string name="search_price_label">Price</string>
    <string name="search_price_lowest">$</string>
    <string name="search_price_lower">$$</string>
    <string name="search_price_higher">$$$</string>
    <string name="search_price_highest">$$$$</string>
    <string name="search_meal_time">Meal time</string>
    <string name="search_meal_time_breakfast">Breakfast</string>
    <string name="search_meal_time_dinner">Dinner</string>
    <string name="search_meal_time_snack">Snack</string>
    <string name="search_meal_time_lunch">Lunch</string>
    <string name="search_location_perms_denied">Location permissions were denied.</string>

    <string name="get_location_getting_perms">Getting permissions...</string>
    <string name="get_location_connecting_API">Connecting to Google API...</string>
    <string name="get_location_getting_perms_failed">Getting permissions failed.</string>
    <string name="get_location_getting_location">Getting location...</string>
    <string name="get_location_connecting_API_failed">Connecting to Google API failed.</string>
    <string name="get_location_getting_location_failed">Failed to get a location.</string>
    <string name="get_location_loading_map">Loading map...</string>

    <string name="diet_restrictions_label">Dietary restrictions</string>
    <string name="diet_restrictions_saved">Dietary restrictions saved!</string>

    <string name="title_activity_first_time">FirstTimeActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="first_time_intro">Welcome! Before starting with the application, we\'ll need to ask you to supply the following data.</string>
    <string name="next">NEXT</string>


</resources>
