<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    tools:context="cs125.winter2017.uci.appetizer.nutrients.NutrientEditorFragment"

    android:orientation="vertical"

    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <fragment
        android:id="@+id/editor_calories"

        android:name="cs125.winter2017.uci.appetizer.nutrients.NutrientSingleValueEditorFragment"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:label="@string/calories_label" />

    <fragment
        android:id="@+id/editor_fat"

        android:name="cs125.winter2017.uci.appetizer.nutrients.NutrientSingleValueEditorFragment"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:label="@string/fat_label"
        app:units="@string/fat_units" />

    <fragment
        android:id="@+id/editor_protein"

        android:name="cs125.winter2017.uci.appetizer.nutrients.NutrientSingleValueEditorFragment"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:label="@string/protein_label"
        app:units="@string/protein_units" />

    <fragment
        android:id="@+id/editor_cholesterol"

        android:name="cs125.winter2017.uci.appetizer.nutrients.NutrientSingleValueEditorFragment"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:label="@string/cholesterol_label"
        app:units="@string/cholesterol_units" />

    <fragment
        android:id="@+id/editor_sugar"

        android:name="cs125.winter2017.uci.appetizer.nutrients.NutrientSingleValueEditorFragment"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:label="@string/sugar_label"
        app:units="@string/sugar_units" />

    <fragment
        android:id="@+id/editor_carbohydrate"

        android:name="cs125.winter2017.uci.appetizer.nutrients.NutrientSingleValueEditorFragment"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:label="@string/carbohydrates_label"
        app:units="@string/carbohydrates_units" />

    <fragment
        android:id="@+id/editor_sodium"

        android:name="cs125.winter2017.uci.appetizer.nutrients.NutrientSingleValueEditorFragment"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:label="@string/sodium_label"
        app:units="@string/sodium_units" />

    <fragment
        android:id="@+id/editor_fiber"

        android:name="cs125.winter2017.uci.appetizer.nutrients.NutrientSingleValueEditorFragment"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:label="@string/fiber_label"
        app:units="@string/fiber_units" />

</LinearLayout>

