<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_search"
        android:title="@string/nav_search"
        android:icon="@drawable/ic_search_black_24dp"/>
    <group
        android:id="@+id/food_stuff">
        <item
            android:id="@+id/nav_diary"
            android:title="@string/nav_diary"
            android:icon="@drawable/ic_book_black_24dp"/>
        <item
            android:id="@+id/nav_daily_targets"
            android:title="@string/nav_daily_target"
            android:icon="@drawable/ic_done_black_24dp"/>
        <item
            android:id="@+id/nav_dietary_restriction"
            android:title="@string/nav_dietary_restriction"
            android:icon="@drawable/ic_assignment_late_black_24dp"/>
    </group>
</menu>
