<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:orientation="vertical"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="cs125.winter2017.uci.appetizer.Search.SearchActivity"
    tools:showIn="@layout/app_bar_search">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:padding="@dimen/content_padding">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginBottom="@dimen/content_padding">


                <LinearLayout
                    android:orientation="vertical"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:orientation="vertical"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <cs125.winter2017.uci.appetizer.CardHeader
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:padding="@dimen/content_padding"

                            app:cardHeaderIcon="@drawable/ic_place_white_24dp"
                            app:cardHeaderTitle="@string/search_location_label" />

                        <TextView
                            android:id="@+id/search_current_location_text"

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:padding="@dimen/content_padding"

                            android:background="@android:color/white"/>

                    </LinearLayout>

                    <fragment
                        android:id="@+id/search_current_location_map"

                        android:name="cs125.winter2017.uci.appetizer.location.GetLocationFragment"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginBottom="@dimen/content_padding">

                <LinearLayout
                    android:orientation="vertical"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <cs125.winter2017.uci.appetizer.CardHeader
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:padding="@dimen/content_padding"

                        app:cardHeaderIcon="@drawable/ic_monetization_on_white_24dp"
                        app:cardHeaderTitle="@string/search_price_label" />

                    <RadioGroup
                        android:orientation="horizontal"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:padding="@dimen/content_padding"

                        android:background="@android:color/white"

                        android:checkedButton="@+id/search_price_lowest">

                        <RadioButton
                            android:id="@+id/search_price_lowest"

                            android:layout_weight="1"

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:text="@string/search_price_lowest" />

                        <RadioButton
                            android:id="@+id/search_price_lower"

                            android:layout_weight="1"

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:text="@string/search_price_lower" />

                        <RadioButton
                            android:id="@+id/search_price_higher"

                            android:layout_weight="1"

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:text="@string/search_price_higher" />

                        <RadioButton
                            android:id="@+id/search_price_highest"

                            android:layout_weight="1"

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:text="@string/search_price_highest" />
                    </RadioGroup>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginBottom="@dimen/content_padding">

                <LinearLayout
                    android:orientation="vertical"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    >

                    <cs125.winter2017.uci.appetizer.CardHeader
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:padding="@dimen/content_padding"

                        app:cardHeaderIcon="@drawable/ic_alarm_white_24dp"
                        app:cardHeaderTitle="@string/search_meal_time" />

                    <RadioGroup
                        android:orientation="horizontal"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:padding="@dimen/content_padding"

                        android:background="@android:color/white"

                        android:checkedButton="@+id/search_meal_time_breakfast">


                        <LinearLayout
                            android:orientation="vertical"

                            android:layout_weight="1"

                            android:layout_width="0dp"
                            android:layout_height="wrap_content">

                            <RadioButton
                                android:id="@+id/search_meal_time_breakfast"

                                android:layout_weight="1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"

                                android:text="@string/search_meal_time_breakfast" />

                            <RadioButton
                                android:id="@+id/search_meal_time_dinner"

                                android:layout_weight="1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"

                                android:text="@string/search_meal_time_dinner" />

                        </LinearLayout>


                        <LinearLayout
                            android:orientation="vertical"

                            android:layout_weight="1"

                            android:layout_width="0dp"
                            android:layout_height="wrap_content">

                            <RadioButton

                                android:id="@+id/search_meal_time_lunch"

                                android:layout_weight="1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"

                                android:text="@string/search_meal_time_lunch" />

                            <RadioButton
                                android:id="@+id/search_meal_time_snack"

                                android:layout_weight="1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"

                                android:text="@string/search_meal_time_snack" />

                        </LinearLayout>


                    </RadioGroup>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
