<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="cs125.winter2017.uci.appetizer.food_diary.DiaryActivity"
    tools:showIn="@layout/app_bar_diary">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:padding="@dimen/content_padding">


            <android.support.v7.widget.CardView
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginBottom="@dimen/content_padding">

                <LinearLayout
                    android:orientation="vertical"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <cs125.winter2017.uci.appetizer.CardHeader
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:padding="@dimen/content_padding"

                        app:cardHeaderIcon="@drawable/ic_done_white_24dp"
                        app:cardHeaderTitle="@string/diary_targets_label" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"

                        android:padding="@dimen/content_padding"

                        android:background="@android:color/white">

                        <TextView
                            android:id="@+id/diary_overview_nutrient_value"

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:fontFamily="sans-serif-condensed"
                            android:textSize="36sp" />

                        <android.support.v4.widget.Space
                            android:layout_width="@dimen/text_spacer"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:fontFamily="sans-serif-condensed"
                            android:textSize="@dimen/card_content_font_size"

                            android:text="@string/slash" />


                        <android.support.v4.widget.Space
                            android:layout_width="@dimen/text_spacer"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/diary_overview_nutrient_target"

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:fontFamily="sans-serif-condensed"
                            android:textSize="@dimen/card_content_font_size" />

                        <android.support.v4.widget.Space
                            android:layout_width="@dimen/text_spacer"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/diary_overview_nutrient_units"

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:fontFamily="sans-serif-condensed"
                            android:textSize="@dimen/card_content_font_size" />

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/diary_add_entry"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginBottom="@dimen/content_padding">

                <RelativeLayout
                    android:orientation="horizontal"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:padding="@dimen/content_padding"

                    android:background="@android:color/white">

                    <LinearLayout
                        android:orientation="horizontal"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_centerInParent="true">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:src="@drawable/ic_add_box_black_24dp"/>

                        <Space
                            android:layout_width="@dimen/text_spacer"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:text="@string/diary_feed_add"/>

                    </LinearLayout>

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/diary_feed_empty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/content_padding"
                android:paddingBottom="@dimen/content_padding"

                android:text="@string/diary_feed_empty"
                android:textAlignment="center"
                />

            <LinearLayout
                android:id="@+id/diary_feed"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
